--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 // 修改滚动条样式
 * {
+  margin:0;padding:0;
   &::-webkit-scrollbar {
     // 滚动条整体样式
     width: 6px;
@@ -18,7 +19,8 @@
   }
 }
 html,
-body {
+body,#app {
+  height:100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -26,9 +28,6 @@ body {
 body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
     Microsoft YaHei, Arial, sans-serif;
-}
-#app {
-  box-sizing: border-box;
 }
 *,
 *:before,
@@ -65,10 +64,10 @@ ul {
 li {
   list-style: none;
 }
-.w100 {
+.w_100 {
   width: 100%;
 }
-.h100 {
+.h_100 {
   height: 100%;
 }
 .of {
