--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,6 +70,7 @@ li {
 .h_100 {
   height: 100%;
 }
+.bg_fff{background-color: #fff;}
 .of {
   overflow: hidden;
 }
@@ -168,6 +169,12 @@ li {
 }
 .border_l {
   border-left: 1px solid #dedede;
+}
+.fontsize_12 {
+  font-size: 12px;
+}
+.fontsize_13 {
+  font-size: 13px;
 }
 .fontsize_14 {
   font-size: 14px;
