chore: 配置eslint prettier 处理格式化不兼容问题

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,8 @@ body,
   box-sizing: border-box;
 }
 body {
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Arial, sans-serif;
 }
 *,
 *:before,
